# lance-autoresearch

./: .gitignore  AGENTS.md  Cargo.toml  HARNESS.md  README.md
crates/harness-common/: Cargo.toml
crates/harness-common/src/: lib.rs  perf.rs  stats.rs  sysinfo.rs  tolerance.rs
crates/lance-snapshots/: Cargo.toml  RESYNC.md
crates/lance-snapshots/src/: assume.rs  l2.rs  lib.rs  pq.rs
crates/posting-intersect/: Cargo.toml  program.md
crates/posting-intersect/src/: inputs.rs  kernels.rs  lib.rs  reference.rs
crates/posting-seek/: Cargo.toml  program.md
crates/posting-seek/src/: inputs.rs  kernels.rs  lib.rs  reference.rs
crates/pq-l2/: Cargo.toml  program.md
crates/pq-l2/benches/: pq_l2.rs
crates/pq-l2/src/: inputs.rs  kernels.rs  lib.rs  reference.rs
docs/: adding-a-target.md  design.md  robustness.md  upstream-pr-checklist.md
docs/targets/: posting-intersect.md  posting-seek.md  pq-l2.md
scripts/: check-keep-gate.py  check-lance-drift.sh  scaffold-target.sh
