[package]
name = "posting-intersect"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Autoresearch target: sorted u32 posting-list AND intersection (FTS query inner loop)."
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "run_experiment"
path = "src/bin/run_experiment.rs"

[dependencies]
harness-common = { path = "../harness-common" }
